--- a/index.html
+++ b/index.html
@@ -2,97 +2,14 @@
 <!-- #1 #structure #document -->
 <html>
 <head>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- #1 #structure #title -->
     <title>chatter|app</title>
 
     <!-- We need to specify the character encoding, since we use chinese characters -->
     <meta charset="UTF-8">
 
-    <!-- #2 #css #elements -->
-    <style>
-
-        /* #2 #colorful #palette is:
-          * Background: #F5F5F5 (GREY 100)
-          * Primary Text: black
-
-          * Primary color: #3F51B5 (INDIGO)
-          * Primary color_text : white
-          * Accent color: #CDDC39 (LIME)
-          * Accent color_text: black
-          */
-
-        /*global styles */
-        * {
-            /* #2 #font #faces */
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            /* #2 #colorful #background */
-            background-color: #F5F5F5;
-        }
-
-        h1 {
-            /* #2 #colourful #app-bar */
-            background-color: #3F51B5;
-            color: white;
-        }
-
-        button {
-            /* #2 #colourful #plusfive */
-            background-color: #CDDC39;
-            color: black;
-            /* #2 #font capital #letters */
-            text-transform: uppercase;
-        }
-
-
-        /*styles for channel area*/
-        h2 {
-            /* #2 #colorful #channelandchat */
-            background-color: white;
-        }
-
-        /*styles for chat area*/
-        p {
-            /* #2 #colorful #channelandchat */
-            background-color: white;
-        }
-
-        strong {
-            /* #2 #font #locations need an extra element, we'll use strong for w3w locations */
-            text-transform: uppercase;
-        }
-
-        h3 {
-            /* #2 #font #metadata is now medium */
-            font-size: medium;
-        }
-
-        em {
-            /* #2 #font #remaining overrides the default italic appearance of em elements*/
-            font-size: larger;
-            font-style: normal;
-        }
-
-        ul{
-            background-color: white;
-            list-style-type: none;
-        }
-        
-        #tab-bar{
-            background-color: white;
-        }
-
-        .chat{
-            width: 80%;;
-        }
-
-        a{
-            color: black;
-        }
-    </style>
+    
 
 </head>
 
@@ -129,7 +46,8 @@
     </small>
 </h1>
 
-<div class="chat"
+<div class="message">
+        <div id="own">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -143,8 +61,9 @@
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 </div>
+</div>
 
-<div class="chat">
+<div class="message">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -159,7 +78,7 @@
 <button>+5 min.</button>
 </div>
 
-<div class="chat">
+<div class="message">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -174,7 +93,7 @@
 <button>+5 min.</button>
 </div>
 
-<div class="chat">
+<div class="message">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -189,7 +108,7 @@
 <button>+5 min.</button>
 </div>
 
-<div class="chat">
+<div class="message">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -204,7 +123,7 @@
 <button>+5 min.</button>
 </div>
 
-<div class="chat">
+<div class="message">
 <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
